@@ -54,8 +54,12 @@ public class SecurityConfig {
                 .formLogin().disable()
                 .httpBasic().disable()
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/users/sign-up", "/login", "/", "/api/users/check-email", "/api/users/check-nickname", "/api/users/email-certification", "/api/users/check-certification", "/api/users/phone-certification", "/api/users/phone-check", "/api/auth/google", "/api/auth/google/callback", "/api/auth/google/success","/api/auth/tok").permitAll()
-                        .requestMatchers("/api/users/**").hasAnyAuthority("ROLE_USER")
+                        .requestMatchers("/api/users/sign-up", "/login", "/",
+                                "/api/users/check-email", "/api/users/check-nickname",
+                                "/api/users/email-certification", "/api/users/check-certification",
+                                "/api/users/phone-certification", "/api/users/phone-check", "/api/users/refresh-token",
+                                "/api/auth/google", "/api/auth/google/callback", "/api/auth/google/success",
+                                "/api/auth/tok").permitAll()
                         .requestMatchers("/api/admin/**").hasAnyAuthority("ROLE_ADMIN")
                         .requestMatchers("/reissue").permitAll()
                         .requestMatchers("/ws/**").permitAll()
@@ -81,8 +85,8 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        configuration.setExposedHeaders(List.of("Authorization","access"));
+        configuration.setAllowedHeaders(Arrays.asList("access", "Cache-Control", "Content-Type"));
+        configuration.setExposedHeaders(List.of("access"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
